--- a/www/guis/admin/public/templates/default/scripts/managecontentquarantine/view.phtml
+++ b/www/guis/admin/public/templates/default/scripts/managecontentquarantine/view.phtml
@@ -56,7 +56,7 @@
  <?php foreach (array('Sender' => 'from_address', 'Destination' => 'to_address', 'Date' => 'date time','Subject' => 'subject', 'Size' => 'size', 'Storage' => 'store_id', 'Report' => 'report') as $key => $value) {?>
      <tr>
        <td class="fieldname"><?php echo $this->t->_($key)?>:</td>
-       <td class="fieldvalue"><?php foreach (split(' ',$value) as $e) { echo $this->msg->getCleanParam($e)." "; }?></td>
+       <td class="fieldvalue"><?php foreach (preg_split('/ /',$value) as $e) { echo $this->msg->getCleanParam($e)." "; }?></td>
      </tr>
  <?php }?>
 
