--- a/www/guis/admin/public/templates/default/scripts/user/login.phtml
+++ b/www/guis/admin/public/templates/default/scripts/user/login.phtml
@@ -23,12 +23,11 @@ $sysconf_ = SystemConfig :: getInstance();
 require_once ('helpers/DataManager.php');
 $file_conf = DataManager :: getFileConfig($sysconf_ :: $CONFIGFILE_);
 
-$is_enterprise = $file_conf['REGISTERED'] == '1';
-if ($is_enterprise)
-        $mclink="www.mailcleaner.net";
-else
-        $mclink="www.mailcleaner.org";
-
+if (isset($file_conf['REGISTERED']) && $file_conf['REGISTERED'] == '1') {
+  $mclink="www.mailcleaner.net";
+} else {
+  $mclink="www.mailcleaner.org";
+}
 
 ?>
 
