--- a/www/guis/admin/public/templates/default/scripts/manageuser/edituser.phtml
+++ b/www/guis/admin/public/templates/default/scripts/manageuser/edituser.phtml
@@ -69,7 +69,7 @@
         </span>
         </h2>
         <div id="domainformcontent">
-<?php foreach (['panel', 'username', 'domain') as $f] {
+<?php foreach (['panel', 'username', 'domain'] as $f) {
 	echo $this->InputRow($this->form->getElement($f),['field_only'=>true,'nobox'=>true]);
   }?>
 <?php echo $this->partial('forms/manageuser/'.strtolower($this->panel).'Form.phtml',[
