--- a/www/guis/admin/public/templates/default/scripts/ajax/managetracing/logextract.phtml
+++ b/www/guis/admin/public/templates/default/scripts/ajax/managetracing/logextract.phtml
@@ -1,6 +1,6 @@
 <td colspan="9" class="tracelogmsg_<?php echo $this->slave.'_'.$this->msgid;?> searched">
 <table class="logextracttable">
-<?php foreach (['log_stage1', 'log_stage2', 'log_engine', 'log_stage4', 'log_spamhandler', 'log_finalstage4') as $l] {?>
+<?php foreach (['log_stage1', 'log_stage2', 'log_engine', 'log_stage4', 'log_spamhandler', 'log_finalstage4'] as $l) {?>
 <?php if (is_array($this->logs[$l])) {  ?>
 <tr>
 <td class="logextracttitle"><?php echo $this->t->_($l);?>: </td>
