--- a/www/guis/admin/public/templates/default/scripts/forms/admineditForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/admineditForm.phtml
@@ -9,7 +9,7 @@
     <div class="adminformcontent">
    
        <table class="ftable">
-          <?php foreach (['password', 'confirm') as $f] {?>
+          <?php foreach (['password', 'confirm'] as $f) {?>
             <?php echo $this->InputRow($this->form->getElement($f)); ?>
           <?php }?>
           
