--- a/www/guis/admin/public/templates/default/scripts/forms/antispam/SpamcForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/antispam/SpamcForm.phtml
@@ -9,7 +9,7 @@
 <?php require_once('helpers/DataManager.php');
 $baseconf = DataManager::getFileConfig(SystemConfig::$CONFIGFILE_); ?>
 
-<?php foreach (['use_bayes', 'use_fuzzyocr', 'use_imageinfo', 'use_pdfinfo', 'use_botnet', 'dmarc_follow_quarantine_policy') as $f] {?>
+<?php foreach (['use_bayes', 'use_fuzzyocr', 'use_imageinfo', 'use_pdfinfo', 'use_botnet', 'dmarc_follow_quarantine_policy'] as $f) {?>
 <?php echo $this->InputRow($this->form->getElement($f));?>
 <?php }?>
 
