--- a/www/guis/admin/public/templates/default/scripts/forms/antivirusglobalsettingsForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/antivirusglobalsettingsForm.phtml
@@ -58,7 +58,7 @@
             <td colspan="2"><hr /></td>
           </tr>
           
-          <?php foreach (['expand_tnef', 'deliver_bad_tnef', 'usetnefcontent') as $f] {?>
+          <?php foreach (['expand_tnef', 'deliver_bad_tnef', 'usetnefcontent'] as $f) {?>
             <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
@@ -66,7 +66,7 @@
             <td colspan="2"><hr /></td>
           </tr>
           
-          <?php foreach (['send_notices', 'notices_to') as $f] {?>
+          <?php foreach (['send_notices', 'notices_to'] as $f) {?>
             <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
