--- a/www/guis/admin/public/templates/default/scripts/forms/companyForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/companyForm.phtml
@@ -10,7 +10,7 @@
 <?php echo $this->partial('layouts/message.phtml', ['message' => $this->message, 't' => $this->t]); ?>
  <fieldset id="companysettings">
        <table class="ftable">
-          <?php foreach (['companyname', 'contactname', 'contactemail') as $f] {?>
+          <?php foreach (['companyname', 'contactname', 'contactemail'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
