--- a/www/guis/admin/public/templates/default/scripts/forms/contentmessageformatForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/contentmessageformatForm.phtml
@@ -10,7 +10,7 @@
 <?php echo $this->partial('layouts/message.phtml', ['message' => $this->message, 't' => $this->t]); ?>
  <fieldset id="defaultssettings">
        <table class="ftable">
-          <?php foreach (['block_encrypt', 'block_unencrypt', 'allow_passwd_archives', 'allow_partial', 'allow_external_bodies') as $a] {?>
+          <?php foreach (['block_encrypt', 'block_unencrypt', 'allow_passwd_archives', 'allow_partial', 'allow_external_bodies'] as $a) {?>
            <?php echo $this->InputRow($this->form->getElement($a)); ?>
           <?php }?>
        
