--- a/www/guis/admin/public/templates/default/scripts/forms/defaultsForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/defaultsForm.phtml
@@ -10,13 +10,13 @@
 <?php echo $this->partial('layouts/message.phtml', ['message' => $this->message, 't' => $this->t]); ?>
  <fieldset id="defaultssettings">
         <table class="ftable">
-          <?php foreach (['language', 'domain', 'showdomainselector') as $f] {?>
+          <?php foreach (['language', 'domain', 'showdomainselector'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           <tr>
             <td colspan="2"><hr /></td>
           </tr>
-          <?php foreach (['sysadmin', 'systemsender', 'falsenegaddress', 'falseposaddress') as $f] {?>
+          <?php foreach (['sysadmin', 'systemsender', 'falsenegaddress', 'falseposaddress'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
