--- a/www/guis/admin/public/templates/default/scripts/forms/domain/userauthentication/ldapForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/domain/userauthentication/ldapForm.phtml
@@ -8,7 +8,7 @@
 ?>
 <td colspan="2">
 <table class="callouttable">
-<?php foreach (['ldapserver', 'basedn', 'binddn', 'bindpass', 'userattribute', 'ldapusessl', 'ldapversion') as $f] {?>
+<?php foreach (['ldapserver', 'basedn', 'binddn', 'bindpass', 'userattribute', 'ldapusessl', 'ldapversion'] as $f) {?>
 <?php echo $this->InputRow($this->form->getElement($f));?>
 <?php }?>
 </table>
