--- a/www/guis/admin/public/templates/default/scripts/forms/domain/userauthentication/pop3Form.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/domain/userauthentication/pop3Form.phtml
@@ -8,7 +8,7 @@
 ?>
 <td colspan="2">
 <table class="callouttable">
-<?php foreach (['authserver', 'pop3usessl') as $f] {?>
+<?php foreach (['authserver', 'pop3usessl'] as $f) {?>
 <?php echo $this->InputRow($this->form->getElement($f));?>
 <?php }?>
 </table>
