--- a/www/guis/admin/public/templates/default/scripts/forms/domainauthenticationForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/domainauthenticationForm.phtml
@@ -25,7 +25,7 @@
           <tr>
             <td colspan="2"><hr /></td>
           </tr>
-          <?php foreach (['usernameformat', 'addresslookup') as $f] {?>
+          <?php foreach (['usernameformat', 'addresslookup'] as $f) {?>
           <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           <?php echo $this->SubmitRow($this->form->getElement('submit'));?>
@@ -33,7 +33,7 @@
           <tr>
             <td colspan="2"><hr /></td>
           </tr>
-          <?php foreach (['testusername', 'testpassword') as $f] {?>
+          <?php foreach (['testusername', 'testpassword'] as $f) {?>
           <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           <?php echo $this->SubmitRow($this->form->getElement('testuserauth'));?>
