--- a/www/guis/admin/public/templates/default/scripts/forms/domainfilteringForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/domainfilteringForm.phtml
@@ -12,7 +12,7 @@
        <?php echo $this->InputRow($this->form->getElement('name'),['field_only'=>true,'nobox'=>true]);?>
        <table class="ftable" id="domainfilteringtable">
        
-          <?php foreach (['spamwall', 'contentwall', 'greylist', 'prevent_spoof', 'reject_capital_domain', 'require_incoming_tls', 'allow_newsletters') as $f] {?>
+          <?php foreach (['spamwall', 'contentwall', 'greylist', 'prevent_spoof', 'reject_capital_domain', 'require_incoming_tls', 'allow_newsletters'] as $f) {?>
           <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
@@ -74,7 +74,7 @@
           </tr>
           <?php }?>
 
-          <?php foreach (['notice_wwlists_hit') as $f] {?>
+          <?php foreach (['notice_wwlists_hit'] as $f) {?>
           <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
 
