--- a/www/guis/admin/public/templates/default/scripts/forms/domainpreferencesForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/domainpreferencesForm.phtml
@@ -12,7 +12,7 @@
        <?php echo $this->InputRow($this->form->getElement('name'),['field_only'=>true,'nobox'=>true]);?>
        <table class="ftable">
        
-          <?php foreach (['language', 'gui_group_quarantines') as $f] {?>
+          <?php foreach (['language', 'gui_group_quarantines'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
@@ -20,7 +20,7 @@
             <td colspan="2"><hr /></td>
           </tr>
           
-           <?php foreach (['summaryfrequency', 'summary_type', 'summary_to') as $f] {?>
+           <?php foreach (['summaryfrequency', 'summary_type', 'summary_to'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
@@ -28,7 +28,7 @@
             <td colspan="2"><hr /></td>
           </tr>
           
-           <?php foreach (['delivery_type', 'spam_tag', 'content_subject', 'file_subject', 'virus_subject') as $f] {?>
+           <?php foreach (['delivery_type', 'spam_tag', 'content_subject', 'file_subject', 'virus_subject'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
