--- a/www/guis/admin/public/templates/default/scripts/forms/manageuser/authentificationForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/manageuser/authentificationForm.phtml
@@ -11,7 +11,7 @@
           <?php echo $this->InputRow($this->form->getElement('realname'));?>
 
           <tr><td colspan="2"><hr /></td></tr>
-           <?php foreach (['password', 'confirm') as $f] {?>
+           <?php foreach (['password', 'confirm'] as $f) {?>
              <?php echo $this->InputRow($this->form->getElement($f));?>             
           <?php }?>
           <tr><td colspan="2" class="fieldnotice"><?php echo $this->t->_('Leaving the password fields empty will generate and send a new password to the user')?></td></tr>
