--- a/www/guis/admin/public/templates/default/scripts/forms/tasksForm.phtml
+++ b/www/guis/admin/public/templates/default/scripts/forms/tasksForm.phtml
@@ -10,7 +10,7 @@
 <?php echo $this->partial('layouts/message.phtml', ['message' => $this->message, 't' => $this->t]); ?>
  <fieldset id="taskssettings">
        <table class="ftable">
-          <?php foreach (['cron_time', 'cron_weekday', 'cron_monthday') as $f] {?>
+          <?php foreach (['cron_time', 'cron_weekday', 'cron_monthday'] as $f) {?>
            <?php echo $this->InputRow($this->form->getElement($f));?>
           <?php }?>
           
