--- a/www/guis/users/public/css/messageview.css
+++ b/www/guis/users/public/css/messageview.css
@@ -143,7 +143,7 @@ td {
 }
 
 .newsletter{
-    border: solid 1px #E93A00;
-    color: #E93A00;
+    border: solid 1px #ED7B00;
+    color: #ED7B00;
     padding: 0px 20px 0px 20px;
 }
