--- a/www/user/htdocs/templates/default/config_meta.tmpl
+++ b/www/user/htdocs/templates/default/config_meta.tmpl
@@ -11,7 +11,7 @@
 
     #configbutton:link {
         color: #FFFFFF;
-        background-color: #e93a00;
+        background-color: #ED7B00;
     }
 
     #generalconfigmenu li#list___THISTOPIC__ {
