--- a/www/user/htdocs/templates/default/help.tmpl
+++ b/www/user/htdocs/templates/default/help.tmpl
@@ -20,7 +20,7 @@
 
         #helpbutton:link {
             color: #FFFFFF;
-            background-color: #e93a00;
+            background-color: #ED7B00;
         }
 
         #generalconfigmenu li#list___THISTOPIC__ {
