--- a/www/user/htdocs/templates/default/navigation.tmpl
+++ b/www/user/htdocs/templates/default/navigation.tmpl
@@ -17,7 +17,7 @@
             <tr>
 
                 <!-- MAILCLEANER LOGO LEFT -->
-                <td width="87" height="90" valign="top"><img src="images/mc_logo.gif" border="0" alt="MailCleaner" />
+                <td width="90" height="90" valign="top"><img src="images/mc_logo.png" border="0" alt="MailCleaner" />
                 </td>
 
                 <!-- GUI TITLE AND NAVIGATION -->
