--- a/www/user/htdocs/templates/default/stats.tmpl
+++ b/www/user/htdocs/templates/default/stats.tmpl
@@ -19,7 +19,7 @@
 
         #statsbutton:link {
             color: #FFFFFF;
-            background-color: #e93a00;
+            background-color: #ED7B00;
         }
     </style>
 </head>
