--- a/www/guis/admin/public/templates/default/css/login.css
+++ b/www/guis/admin/public/templates/default/css/login.css
@@ -33,7 +33,7 @@ img {
     background-repeat: repeat-x;
     font-size: 12px;
     color: #000000;
-    background-color: #F5F5F5;
+    background-color: #e8e8e8; /*__MAINHEADERBG__*/
     text-align: left;
     border: solid 2px black;
     border-radius: 20px;
@@ -41,29 +41,41 @@ img {
 
 #mclogo {
     vertical-align: top;
-    background-color: #5C6D99; /*__MAINHEADERBG__*/
     border-top-left-radius: 19px;
     border-top-right-radius: 19px;
 }
 
 /* footer */
+
+#loginfooter img {
+    padding-top: 10px;
+    height: 20px;
+}
+
+#loginfooter a {
+    color: #ffffff;
+}
+
 #loginfooter {
     margin: 0px;
     margin-top: 5px;
     padding: 0px;
     padding-top: 1px;
     background-repeat: repeat-x;
-    color: #4A4A4A;
-    height: 22px;
+    background-color: #022971;
+    border-bottom-left-radius: 19px;
+    border-bottom-right-radius: 19px;
+    height: 50px;
 }
 
 .copyright {
-    float: left;
-    margin-left: 7px;
-    color: #4A4A4A;
-    font-size: 11px;
-    display: inline;
-    line-height: 22px;
+    text-align: right;
+    position: relative;
+    margin-right: 15px;
+    margin-top: 5px;
+    font-weight: bold;
+    color: #ffffff;
+    font-size: 12px;
 }
 
 .copyright a {
