--- a/www/guis/admin/public/templates/default/css/quarantine.css
+++ b/www/guis/admin/public/templates/default/css/quarantine.css
@@ -378,7 +378,7 @@ img {
 #pagination td {
     height: 48px;
     line-height: 48px;
-    color: #E93A00;
+    color: #ED7B00;
     font-size: 12px;
     text-decoration: none;
 }
@@ -479,7 +479,7 @@ img {
 
 /* bouton Newsletter*/
 .newsletter{
-    border: solid 1px #E93A00;
-    color: #E93A00;
+    border: solid 1px #ED7B00;
+    color: #ED7B00;
     padding: 0px 20px 0px 20px;
 }
