--- a/www/user/htdocs/templates/default/css/login.css
+++ b/www/user/htdocs/templates/default/css/login.css
@@ -35,7 +35,7 @@ img {
 
 #mclogo {
     vertical-align: top;
-    background-color: #5C6D99; /*__MAINHEADERBG__*/
+    background-color: #e8e8e8; /*__MAINHEADERBG__*/
 }
 
 /* formular table */
