--- a/www/user/htdocs/templates/default/login.tmpl
+++ b/www/user/htdocs/templates/default/login.tmpl
@@ -37,7 +37,7 @@
 <body onload="document.forms['login'].username.focus();">
 
     <div id="loginpanel">
-        <img id="mclogo" src="images/login_header.png" alt="" />
+        <img id="mclogo" src="images/logo_name.png" alt="" />
         <p id="badlogin">__PRINT_STATUS__</p>
         __BEGIN_LOGIN_FORM__
         <table>
