--- a/www/user/htdocs/templates/default/logout.tmpl
+++ b/www/user/htdocs/templates/default/logout.tmpl
@@ -15,7 +15,7 @@
 <body>
 
     <div id="loginpanel">
-        <img id="mclogo" src="images/login_header.png" alt="" />
+        <img id="mclogo" src="images/logo_name.png" alt="" />
 
         <p id="sessioninfo">__LANG_SESSIONTERMINATED__</p>
         <p id="logoutinfo">__BEENLOGGEDOUT__</p>
