Branding update in quarantine

--- a/www/user/htdocs/templates/default/quarantine.tmpl
+++ b/www/user/htdocs/templates/default/quarantine.tmpl
@@ -49,7 +49,7 @@
 
         #quarantinebutton:link {
             color: #FFFFFF;
-            background-color: #e93a00;
+            background-color: #ED7B00;
         }
 
         .c___ORDER_FIELD__ {
