Further modernization of GUI theme for Admin

--- a/www/guis/admin/public/templates/default/scripts/layouts/main.phtml
+++ b/www/guis/admin/public/templates/default/scripts/layouts/main.phtml
@@ -116,10 +116,10 @@
                 <?php
                 $sysconf = MailCleaner_Config::getInstance();
                 if ($sysconf->getOption('REGISTERED') == "1") {
-                    echo '<p id="copyright"><a href="http://www.mailcleaner.net" target="_blank">&copy; www.mailcleaner.net</a></p>';
+                    echo '<p id="copyright"><a href="http://www.mailcleaner.net" target="_blank">&copy; MailCleaner, an <img src="/templates/default/images/alinto.png"></a></p>';
                     echo '<p id="company"><a href="https://support.mailcleaner.net/" target="_blank">Support provided by MailCleaner</a></p>';
                 } else {
-                    echo '<p id="copyright"><a href="http://www.mailcleaner.org" target="_blank">&copy; www.mailcleaner.org</a></p>';
+                    echo '<p id="copyright"><a href="http://www.mailcleaner.org" target="_blank">&copy; MailCleaner, the Open Source email filter from <img src="/templates/default/images/alinto.png"</a></p>';
                     echo '<p id="company"><a href="http://forum.mailcleaner.org/" target="_blank">Support provided by Community</a></p>';
                 }
 
