--- a/www/guis/admin/public/templates/default/css/main.css
+++ b/www/guis/admin/public/templates/default/css/main.css
@@ -13,7 +13,6 @@
     position:relative;
     margin:0 auto;
     height:auto !important;
-    height: 100%;
     min-height: 100%;
     width: 100%;
     min-width: 955px;
@@ -94,44 +93,56 @@
 #pagefoot {
     position: fixed;
     bottom: 0px;
-    height: 24px;
     width: 100%;
     overflow: hidden;
-    background-color: #F5F5F5;
+    background-color: #022971;
 }
+
+#pagefoot a {
+    font-weight: bold;
+    text-decoration: none;
+};
 
 /* legal panel */
 #legalpanel {
-    border-top: 1px solid #CBC1C8;
-    color: #552056;
     width: 100%;
     line-height: 22px;
 }
+
 #legalpanel p {
+    padding: 5px;
     margin: 0px;
-    padding: 0px;
-    padding-left: 15px;
-    padding-right: 15px;
     line-height: 22px;
 }
 
 #copyright {
     float: left;
-    color: #A589A5;
-    font-size: 11px;
-    display: inline;
-    line-height: 23px;
 }
 
 #company {
-    display: inline;
-    float:right;
-    font-size: 9px;
-    color: #AA2056;
-    line-height: 23px;
+    float: right;
+    margin-right: 10px;
 }
 
-/* internal parts */
+#company, #copyright {
+    display: inline;
+}
+
+#company a, #copyright a {
+    color: #ffffff;
+    line-height: 30px;
+    vertical-align: bottom;
+    font-size: 14px;
+    color: #ffffff;
+}
+
+#copyright img {
+    height: 20px;
+    padding-bottom: 5px;
+    vertical-align: bottom;
+}
+
+* internal parts */
 #generalconfigpanel {
     margin: 40px;
     height: 100%;
