Text visibility improvement

--- a/www/user/htdocs/templates/default/css/quarantine.css
+++ b/www/user/htdocs/templates/default/css/quarantine.css
@@ -146,7 +146,8 @@ img {
 }
 
 #quarantineheader td {
-    color: #F5F5F5;
+    color: #022971;
+    font-weight: bold;
 }
 
 #quarantineheader img {
